Renew the router
